feat: fix request body examples in swagger
